# hex

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile.bak  Makefile.in  README  README.adoc  TODO.md  aclocal.m4  add.html  add.x  blocks.html  blocks.x  buf.html  buf.x  buffer.html  buffer.hx  buffer.x  buffer.xml  config.h.in  configure  configure.ac  consumer.html  consumer.hx  consumer.x  consumer.xml  edit.html  edit.x  entities.html  entities.xml  frag.html  frag.x  hash.html  hash.x  hex.c  html.html  (+33 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
docs/: .gitignore  Makefile  Makefile.am  Makefile.in  _config.yml  add.html  add.md  add.x  blocks.html  blocks.md  blocks.x  edit.html  edit.md  frag.html  frag.md  frag.x  html.html  html.md  html.x  hx_run  index.html  index.md  index.x  input.html  input.md  line.html  line.md  log.html  log.md  log.x  ncurses.html  ncurses.md  ncurses.x  range.html  range.md  read.html  read.md  read.x  test.md  todos.html  (+7 more)
docs/_site/: add.html  blocks.html  edit.html  html.html  index.html  input.html  log.html  range.html  read.html  todos.html
docs/_site/slides/: LICENSE  Makefile.am  Makefile.in  slides.css
src/: Makefile.am  Makefile.in  hx-files.sh  hx-incs.sh  hx-srcs.sh  hx-undoc.sh  hx.cpp  hx_run  ncurses.html
